Some fixes to main page

--- a/index.html
+++ b/index.html
@@ -75,18 +75,20 @@
 <div class="landing">
 	<h1>Зв'язатися з нами</h1>
 	<p><img src="ecommerce.png" alt="Створення сайтів"></p>
-	<h2>Залишіть свої контакти, або запитання.</h2>
+	<h2>Залишіть будь ласка свої контакти.</h2>
 	<p>Ми зв'яжимось з Вами найближчим часом. Консультація безкоштовна.</p>
 	<ul>
 		<li>Гнучкі ціни</li>
-		<li>Знижки</li>
-		<li>Якість</li>
+		<li>Якість виконання</li>
+		<li>Швидка реалізація</li>
+		<li>Індивідуальний підхід до клінта</li>
+		<li>Мождивість надання знижки</li>
 		<li>Технічна підтримка</li>
-		<li>Просування в пошуку</li>
+		<li>SEO</li>
 	</ul>
-	<h3>Ціна за домовленістю</h3>
+	<h3>Ціни за домовленістю</h3>
 		<form action="https://docs.google.com/forms/d/e/1FAIpQLSfey0dGwMPuxPHeBoiJGRXMM10pKT1Ur2RsG8HrR6pemiKf4Q/formResponse" target="_self" method="POST" id="mG61Hd" >
-			<input type="text" placeholder="Введіть текст" name="entry.1869810047" class="text">
+			<input type="text" placeholder="Введіть ваші контакти" name="entry.1869810047" class="text">
 			<input type="submit" value="Відправити" class="button">
 	</form>
 </div>
