--- a/index.html
+++ b/index.html
@@ -75,14 +75,16 @@
 <div class="landing">
 	<h1>Зв'язатися з нами</h1>
 	<p><img src="ecommerce.png" alt="Створення сайтів"></p>
-	<h2>Залишіть будь ласка свої контакти.</h2>
-	<p>Ми зв'яжимось з Вами найближчим часом. Консультація безкоштовна.</p>
+	<h2>Залиште, будь ласка, свої контакти.</h2>
+	<p>Ми зв'яжимось з Вами найближчим часом.</p>
 	<ul>
+		<li>Сайти будь-якого типу та рівня складності</li>
+		<li>Безкоштовна консультація</li>
 		<li>Гнучкі ціни</li>
 		<li>Якість виконання</li>
 		<li>Швидка реалізація</li>
-		<li>Індивідуальний підхід до клінта</li>
-		<li>Мождивість надання знижки</li>
+		<li>Індивідуальний підхід до клієнта</li>
+		<li>Можливість надання знижки</li>
 		<li>Технічна підтримка</li>
 		<li>SEO</li>
 	</ul>
