Add info to footer

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
 	<ul>
 		<li>Сайти будь-якого типу та рівня складності</li>
 		<li>Безкоштовна консультація</li>
-		<li>Гнучкі ціни</li>
 		<li>Якість виконання</li>
 		<li>Швидка реалізація</li>
 		<li>Індивідуальний підхід до клієнта</li>
@@ -89,10 +88,11 @@
 		<li>SEO</li>
 	</ul>
 	<h3>Ціни за домовленістю</h3>
-		<form action="https://docs.google.com/forms/d/e/1FAIpQLSfey0dGwMPuxPHeBoiJGRXMM10pKT1Ur2RsG8HrR6pemiKf4Q/formResponse" target="_self" method="POST" id="mG61Hd" >
+	<form action="https://docs.google.com/forms/d/e/1FAIpQLSfey0dGwMPuxPHeBoiJGRXMM10pKT1Ur2RsG8HrR6pemiKf4Q/formResponse" target="_self" method="POST" id="mG61Hd" >
 			<input type="text" placeholder="Введіть ваші контакти" name="entry.1869810047" class="text">
 			<input type="submit" value="Відправити" class="button">
 	</form>
+	<p><small>Будь лвска, перевіряйте правильність введення контактів.</small></p>
 </div>
 </body>
 </html>
