Last touches to footer

--- a/index.html
+++ b/index.html
@@ -76,23 +76,25 @@
 	<h1>Зв'язатися з нами</h1>
 	<p><img src="ecommerce.png" alt="Створення сайтів"></p>
 	<h2>Залиште, будь ласка, свої контакти.</h2>
-	<p>Ми зв'яжимось з Вами найближчим часом.</p>
+	<p>Ми зв'яжимось з Вами найближчим часом. Всі консультації безкоштовні.</p>
 	<ul>
 		<li>Сайти будь-якого типу та рівня складності</li>
-		<li>Безкоштовна консультація</li>
-		<li>Якість виконання</li>
+		<li>Якісне виконання</li>
 		<li>Швидка реалізація</li>
-		<li>Індивідуальний підхід до клієнта</li>
-		<li>Можливість надання знижки</li>
 		<li>Технічна підтримка</li>
 		<li>SEO</li>
+		<li>Індивідуальний підхід до кожного клієнта</li>
+		<li>Можливість надання знижки</li>
 	</ul>
 	<h3>Ціни за домовленістю</h3>
 	<form action="https://docs.google.com/forms/d/e/1FAIpQLSfey0dGwMPuxPHeBoiJGRXMM10pKT1Ur2RsG8HrR6pemiKf4Q/formResponse" target="_self" method="POST" id="mG61Hd" >
 			<input type="text" placeholder="Введіть ваші контакти" name="entry.1869810047" class="text">
 			<input type="submit" value="Відправити" class="button">
 	</form>
-	<p><small>Будь лвска, перевіряйте правильність введення контактів.</small></p>
+	<p><small>Будь лвска, перевіряйте правильність введення контактів.<br />
+			  Веедіть один або декілька контактів через кому. <br />
+			  Наприклад, номер телефону, адресу сторінки в соц. мережі або e-mail.
+	</small></p>
 </div>
 </body>
 </html>
