Fixes to height

--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
 		<li>Індивідуальний підхід до кожного клієнта</li>
 		<li>Можливість надання знижки</li>
 	</ul>
-	<h3>Ціни за домовленістю</h3>
 	<form action="https://docs.google.com/forms/d/e/1FAIpQLSfey0dGwMPuxPHeBoiJGRXMM10pKT1Ur2RsG8HrR6pemiKf4Q/formResponse" target="_self" method="POST" id="mG61Hd" >
 			<input type="text" placeholder="Введіть ваші контакти" name="entry.1869810047" class="text">
 			<input type="submit" value="Відправити" class="button">
 	</form>
 	<p><small>Будь лвска, перевіряйте правильність введення контактів.<br />
-			  Веедіть один або декілька контактів через кому. <br />
+			  Веедіть один або декілька контактів через кому.
 			  Наприклад, номер телефону, адресу сторінки в соц. мережі або e-mail.
 	</small></p>
 </div>
