Fixes incorected words

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 </head>
 <body>
 <div class="landing">
-	<h1>Зв'язатися з нами</h1>
+	<h1>Зв'язок з нами</h1>
 	<p><img src="ecommerce.png" alt="Створення сайтів"></p>
 	<h2>Залиште, будь ласка, свої контакти.</h2>
-	<p>Ми зв'яжимось з Вами найближчим часом. Всі консультації безкоштовні.</p>
+	<p>Ми зв'яжимось з Вами найближчим часом. Усі консультації безкоштовні.</p>
 	<ul>
 		<li>Сайти будь-якого типу та рівня складності</li>
 		<li>Якісне виконання</li>
@@ -90,8 +90,8 @@
 			<input type="text" placeholder="Введіть ваші контакти" name="entry.1869810047" class="text">
 			<input type="submit" value="Відправити" class="button">
 	</form>
-	<p><small>Будь лвска, перевіряйте правильність введення контактів.<br />
-			  Веедіть один або декілька контактів через кому.
+	<p><small>Будь ласка, перевіряйте правильність введення контактів.<br />
+			  Введіть один або декілька контактів через кому.
 			  Наприклад, номер телефону, адресу сторінки в соц. мережі або e-mail.
 	</small></p>
 </div>
